--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ li {
 
 header {
     min-height: 100vh;
-    background: cornflowerblue;
+    background: darkred;
     display: flex;
     flex-direction: column;
 }
